20200509寄生组合式继承

--- a/20200508第六章其他继承方法.md
+++ b/20200508第六章其他继承方法.md
@@ -127,6 +127,7 @@ function object(o){
     return new F();
 }
 ```
+
 - [理解原型式继承](https://segmentfault.com/q/1010000005184065)
 
 
@@ -240,11 +241,12 @@ SubType.prototype.sayAge = function() {
 };
 
 ```
+
 - 寄生组合继承使用方式
 
 ```js
 function inheritPrototype(subType, superType) {
-    // 这里的object()是哪个函数
+    // object()
     var prototype = object(superType.prototype);
     prototype.constructor = subType;
     subType.prototype = prototype;
@@ -273,3 +275,4 @@ SubType.prototype.sayAge = function() {
 };
 ```
 
+![image](https://cdn.nlark.com/yuque/0/2020/png/419446/1588996654603-6a53be78-133e-4864-b0ff-91bf96f640ab.png)
