--- a/20200511第七章函数表达式.md
+++ b/20200511第七章函数表达式.md
@@ -14,7 +14,7 @@ var functionName = function(arg0, agr1){
 ## 7.1 递归
 
 - 递归时使用arguments.callee保证递归调用不出错
-- 严格模式arguments.callee会报错（未发现，可能是浏览器缓存）
+
 
 ```js
 var factorial = (function f(num) {
@@ -26,10 +26,31 @@ var factorial = (function f(num) {
 });
 ```
 
+- 严格模式下arguments.callee会报错
+
+```js
+function aaaa(num) {
+    'use strict';
+     if (num < 1) {
+        return 1;
+    } else {
+        return num * arguments.callee(num-1);
+    }
+}
+
+
+aaaa(20);
+
+Uncaught TypeError: 'caller', 'callee', and 'arguments' properties may not be accessed on strict mode functions or the arguments objects for calls to them
+```
+
+
+
 ## 7.2 闭包
 
 - 闭包指有权访问另一个函数作用域中的变量的函数
 - 创建闭包的常见方式：在一个函数内部创建另一个函数
+
 
 
 - 创建函数时，创建预先包含全局变量的作用域链，储存在scope属性中
@@ -37,7 +58,47 @@ var factorial = (function f(num) {
 - 之后活动变量创建并推入作用域链的前端
 
 
+```js
+function compare(value1, value2) {
+    if (value1 < value2) {
+        return -1;
+    } else if (value1 > value2) {
+        return 1;
+    } else {
+        return 0;
+    }
+}
+
+var result = compare(4, 2);
+```
+
 ![image](https://cdn.nlark.com/yuque/0/2020/png/419446/1589164182311-6f502a47-b82a-4b7f-b09d-4cadfcea0ca5.png)
+
+
+```js
+function createComparisonFunction(propertyName) {
+    
+    return function(object1, object2) {
+        var value1 = object[propertyName];
+        var value2 = object[propertyName];
+        if (value1 < value2) {
+            return -1;
+        } else if (value1 > value2) {
+            return 1;
+        } else {
+            return 0;
+        }
+    };
+}
+
+var compare = createComparisonFunction("name");
+
+// 调用函数
+var result = compare({name: "Nicolas"},{name: "Greg"});
+
+// 解除引用，释放内存
+result = null;
+```
 
 ![image](https://cdn.nlark.com/yuque/0/2020/png/419446/1589166928886-ce170cc8-a14b-451a-827c-93ce57b3f38c.png)
 
@@ -47,11 +108,13 @@ var factorial = (function f(num) {
 
 ### 7.2.1 闭包与变量
 
+- 闭包获取全部变量
 - 返回10
 
 ```js
 function createFunctions() {
     var result = new Array();
+    
     for( var i=0; i<10; i++) {
         result[i] = function() {
             return i;
@@ -67,6 +130,7 @@ createFunctions();
 
 - 不把闭包直接赋值给数组
 - 创建一个匿名函数
+- 变量按值传递，把i传递给num
 
 ```js
 function createFunctions() {
@@ -92,7 +156,7 @@ createFunctions();
 
 ### 7.2.2 this
 
-
+- 匿名函数this通常是window
 - 只能搜索到活动变量
 
 ```js
@@ -154,10 +218,11 @@ object.getNameFunc()();
 
 - 创建私有作用域，避免创建过多的全局变量
 - 减少闭包占用的内存问题
+- 块级作用域/私有作用域语法：
 
 ```js
 (function(){
-    // 块级作用域
+    // 块级作用域/私有作用域
 })();
 ```
 
@@ -165,14 +230,19 @@ object.getNameFunc()();
 
 ## 7.4 私有变量
 
+- 函数中定义的变量即为私有变量，不能在函数的外部访问，包括函数的参数、局部变量和内部定义的其他函数
+- 有权访问私有变量和私有函数的方法为特权方法
+- 在对象上创建特权方法
+    - 在构造函数中定义特权方法
+    - 静态私有变量
 
-- 通过闭包访问私有属性
-
+### 构造函数模式
 
 ```js
 function MyObject() {
-    // 私有变量和私有函数
+    // 私有变量和私有函数，函数外部无法访问，只能通过publicMethod访问
     var privateVariable = 10;
+    
     function privateFunction() {
         return false;
     }
@@ -184,8 +254,6 @@ function MyObject() {
     };
 }
 ```
-### 实例变量
-
 
 - 在构造函数中使用特权方法（public method）
 
@@ -219,12 +287,14 @@ person.getName();
 (function() {
     var privateVariable = 10;
     function privateFunction() {
-return false;
+    return false;
     }
     
+    // 构造函数
     // 没有使用var的函数表达式，MyObject为全局变量
     MyObject = function() {
     };
+    
     MyObject.prototype.publicMethod = function() {
         privateVariable++;
         return privateFunction();
@@ -233,6 +303,7 @@ return false;
 ```
 
 - 私有变量和函数由实例共享
+- 增加代码复用，但实例没有自己的私有变量
 
 
 ```js
@@ -280,7 +351,7 @@ var singleton = {
 ```
 
 ```js
-var singletom = function() {
+var singleton = function() {
     
     // 私有变量和函数
     var privateVariable = 10;
