--- a/20200522回调函数.md
+++ b/20200522回调函数.md
@@ -101,6 +101,23 @@ loadScript('https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.2.0/lodash.js', s
 </html>
 ```
 
-1. 动画结束后会出现两个Hello World
+### 问题：动画结束后会出现两个Hello World
 ![image](https://cdn.nlark.com/yuque/0/2020/png/419446/1590116371795-0c810c91-afda-46ed-8126-0541eede7d1c.png)
 
+通过打断点发现：
+
+
+正常的执行顺序：
+1. showMessage() 
+2. showCircle(){...setTimeout(div.addEventListener...callback...)}
+3. div.classList... div.append...
+4. setTimeout(...);最后一步
+
+
+没有移除监听事件的执行顺序：
+1. showMessage() 
+2. showCircle(){...}
+3. div.classList... div.append...
+4. div.addEventListener...
+5. div.classList... div.append...
+6. div.addEventListener...
