--- a/20200522callback.md
+++ b/20200522callback.md
@@ -106,18 +106,34 @@ loadScript('https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.2.0/lodash.js', s
 
 通过打断点发现：
 
+正常的执行顺序是：
+1. showMessage() 先执行其中的showCircle()
+2. showCircle(){...}，在setTimeout()跳出，继续执行showMessage()，回调函数暂不执行
+3. showMessage()执行完毕，因此<button>的click事件启用
+4. 执行setTimeout里的内容，动画渲染触发addEventListener，执行callback
+5. div.classList... div.append...添加文字
+6. setTimeout执行完毕
 
-正常的执行顺序：
-1. showMessage() 
-2. showCircle(){...setTimeout(div.addEventListener...callback...)}
-3. div.classList... div.append...
-4. setTimeout(...);最后一步
+
+没有移除监听事件的执行顺序，与前者前五步都是一样的：
+1. showMessage() 先执行其中的showCircle()
+2. showCircle(){...}，在setTimeout()跳出，继续执行showMessage()，回调函数暂不执行
+3. showMessage()执行完毕，因此<button>的click事件启用
+4. 执行setTimeout里的内容，动画渲染触发addEventListener，执行callback
+5. div.classList... div.append...添加文字
+6. 再次执行callback
+7. div.classList... div.append...添加文字
+8. setTimeout执行完毕
 
 
-没有移除监听事件的执行顺序：
-1. showMessage() 
-2. showCircle(){...}
-3. div.classList... div.append...
-4. div.addEventListener...
-5. div.classList... div.append...
-6. div.addEventListener...
+
+问题：为什么会触发两次回调？
+
+- 是否因为回调函数中执行了DOM操作，DOM操作引起CSS重新渲染，触发事件监听
+- 如果是因为DOM操作，为什么只触发两次回调，而不是一直循环下去
+
+
+
+
+
+
