--- a/20200522callback.md
+++ b/20200522callback.md
@@ -134,6 +134,11 @@ loadScript('https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.2.0/lodash.js', s
 
 
 
+解答（感谢123小姐姐）：
 
+因为修改了两个属性，因此调用了两次
 
-
+```js
+div.style.width = radius * 2 + 'px';
+div.style.height = radius * 2 + 'px';
+```
