--- a/20200522promise.md
+++ b/20200522promise.md
@@ -177,11 +177,107 @@ new Promise((resolve, reject) => {
 ```
 
 
+## 练习
+
+### 基于 promise 的延时
+内建函数 setTimeout 使用了回调函数。请创建一个基于 promise 的替代方案。
+
+函数 delay(ms) 应该返回一个 promise。这个 promise 应该在 ms 毫秒后被 resolve，所以我们可以向其中添加 .then，像这样：
+```js
+function delay(ms) {
+  // 你的代码
+}
+
+delay(3000).then(() => alert('runs after 3 seconds'));
+```
+
+#### 我的解决方案
+
+```js
+function delay(ms) {
+    return new Promise(function(resolve, reject) {
+        setTimeout(() => resolve(), ms);
+    });
+}
+
+delay(3000).then(() => alert('runs after 3seconds'));
+```
+
+#### 官网解决方案
+
+箭头函数
+
+```js
+function delay(ms) {
+  return new Promise(resolve => setTimeout(resolve, ms));
+}
+
+delay(3000).then(() => alert('runs after 3 seconds'));
+```
 
 
+### 带回调的圆形
+改写callback
 
+```js
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <style>
+    .message-ball {
+      font-size: 20px;
+      line-height: 200px;
+      text-align: center;
+    }
+    .circle {
+      transition-property: width, height, margin-left, margin-top;
+      transition-duration: 2s;
+      position: fixed;
+      transform: translateX(-50%) translateY(-50%);
+      background-color: red;
+      border-radius: 50%;
+    }
+  </style>
+</head>
 
+<body>
+  <button onclick="go()">Click me</button>
+
+  <script>
+  function go() {
+    showCircle(150, 150, 100).then(div => {
+    div.classList.add('message-ball');
+    div.append("Hello, world!");
+  });
+  }
+
+  function showCircle(cx, cy, radius) {   
+    return new Promise(resolve => {
+    let div = document.createElement('div');
+    div.style.width = 0;
+    div.style.height = 0;
+    div.style.left = cx + 'px';
+    div.style.top = cy + 'px';
+    div.className = 'circle';
+    document.body.append(div);
+    
+    setTimeout(() => {
+      div.style.width = radius * 2 + 'px';
+      div.style.height = radius * 2 + 'px';
+
+      div.addEventListener('transitionend', function handler() {
+        div.removeEventListener('transitionend', handler);
+        resolve(div);
+      });
+    }, 0);
+    });
+  }
+  </script>
+</body>
+</html>
+```
 
 
 
