--- a/20200522promise.md
+++ b/20200522promise.md
@@ -7,9 +7,9 @@
 let promise = new Promise(function(resolve, reject) {
     // executor
 })
+```
 
 executor立即执行
-```
 
 ```js
 let promise = new Promise(function(resolve, reject) {
@@ -282,5 +282,65 @@ delay(3000).then(() => alert('runs after 3 seconds'));
 ```
 
 
+# 20200524 手写promise
+
+
+promise.js
+```js
+const PENDING = 'PENDING';
+const RESOLVED = 'RESOLVED';
+const REJECTED = 'REJECTED';
+
+class Promise {
+    constructor(executor) {
+        this.status = PENDING;
+        this.value = undefined;
+        this.reason = undefined;
+
+        let resolve = (value) => {
+            if (this.status === PENDING) {
+                this.status === RESOLVED;
+                this.value = value;
+            }
+        }
+
+        let reject = (reason) => {
+            if (this.status === PENDING) {
+                this.status === REJECTED;
+                this.reason = reason;
+            }
+        }
+
+        try {
+            executor(resolve, reject);
+        }catch(e) {throw new Error()}      
+    }
+}
+
+module.exports = Promise;
+```
+
+同级目录下 promiseExample.js
+```js
+// 成功的情况
+let Promise = require('./promise');
+let promise = new Promise((resolve, reject) => {
+    resolve('成功');
+    reject(() => {throw new Error('失败')});
+});
+
+console.log(promise);
+// Promise {status: "PENDING", value: "成功", reason: }
+
+// 失败的情况
+let Promise = require('./promise');
+let promise = new Promise((resolve, reject) => {
+    // resolve('成功');
+    reject('失败');
+});
+
+console.log(promise);
+// Promise {status: "PENDING", value: undefined, reason: "失败"}
+```
 
 
