--- a/20200522promise.md
+++ b/20200522promise.md
@@ -299,21 +299,34 @@ class Promise {
 
         let resolve = (value) => {
             if (this.status === PENDING) {
-                this.status === RESOLVED;
                 this.value = value;
+                this.status = RESOLVED;
+                
             }
         }
 
         let reject = (reason) => {
             if (this.status === PENDING) {
-                this.status === REJECTED;
                 this.reason = reason;
+                this.status = REJECTED;
+                
             }
         }
 
         try {
             executor(resolve, reject);
-        }catch(e) {throw new Error()}      
+        }catch(e) {
+            reject(e);
+        }              
+    }
+
+    then(onFulfilled, onRejected) {
+        if (this.status === RESOLVED) {
+            onFulfilled(this.value);
+        }
+        if(this.status === REJECTED) {
+            onRejected(this.reason);
+        }
     }
 }
 
@@ -322,25 +335,23 @@ module.exports = Promise;
 
 同级目录下 promiseExample.js
 ```js
-// 成功的情况
 let Promise = require('./promise');
 let promise = new Promise((resolve, reject) => {
     resolve('成功');
-    reject(() => {throw new Error('失败')});
-});
-
-console.log(promise);
-// Promise {status: "PENDING", value: "成功", reason: }
-
-// 失败的情况
-let Promise = require('./promise');
-let promise = new Promise((resolve, reject) => {
-    // resolve('成功');
     reject('失败');
 });
 
-console.log(promise);
-// Promise {status: "PENDING", value: undefined, reason: "失败"}
+promise.then(
+   (data) => {
+       console.log('success', data)
+   },
+   (err) => {
+       console.log('failed', err)
+   }
+);
+
+// success, 成功
+// failed, 失败
 ```
 
 
